--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -32,6 +32,7 @@ body,
   position: relative;
   padding-left: 1.2em;
   margin-left: 1em;
+  cursor: pointer;
   &::before {
     position: absolute;
     font-family: icomoon;
@@ -167,12 +168,34 @@ ul.surrounding {
     padding-top: 0;
   }
 
+  h4 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    font-size: 1.2em;
+
+    em,
+    a {
+      display: inline-block;
+    }
+    em {
+      font-size: 0.75em;
+      margin-left: 0.5em;
+    }
+  }
+
+  p {
+    margin-top: 0.25em;
+  }
+
   article:last-child {
     border-bottom: none;
   }
 
   a {
-    color: white;
+    color: yellow;
+    text-decoration: none;
   }
 }
 
@@ -235,7 +258,8 @@ ul.surrounding {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-
+    background-color: black;
+    min-height: 2.5em;
     p {
       margin: 0.25em 1em;
     }
@@ -265,10 +289,10 @@ ul.surrounding {
       p {
         margin: 0 1em;
         &:first-child {
-          margin: 0 1em 0 0;
+          margin: 0.25em 1em 0 0;
         }
         &:last-child {
-          margin: 0 0 0 1em;
+          margin: 0.25em 0 0 1em;
         }
       }
     }
