--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -199,6 +199,27 @@ ul.surrounding {
   }
 }
 
+.loading-overlay {
+  position: absolute;
+  top: 5%;
+  left: 20%;
+  width: 60%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.333s ease-in-out;
+  &.loading {
+    opacity: 1;
+  }
+  pointer-events: none;
+  img {
+    width: 75%;
+    height: 75%;
+  }
+}
+
 .map-container {
   position: relative;
 
